--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,11 @@
 {
-  "name": "joshralph/password-policy",
+  "name": "lucas-lima-c/password-policy",
   "description": "A library to intuitively create password policies and validate a subject against them.",
   "autoload": {
     "psr-4": {
       "PasswordPolicy\\Tests\\": "tests/",
-      "PasswordPolicy\\": "src/PasswordPolicy/"
+      "PasswordPolicy\\": "src/PasswordPolicy/",
+      "PasswordPolicy\\Database\\Factories\\": "database/factories"
     }
   },
   "require": {
@@ -13,5 +14,9 @@
   "require-dev": {
     "phpunit/phpunit": "^4.8",
     "mockery/mockery": "^0.9.5"
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit",
+    "test-f": "vendor/bin/phpunit --filter"
   }
 }
