--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     ]
   },
   "require": {
-    "php": ">=5.5",
-    "laravel/laravel": "6.*"
+    "php": ">=5.5"
   },
   "require-dev": {
     "orchestra/testbench": "^4.0"
